<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.flightDetails.FlightDetailsFragment">

    <TextView
        android:id="@+id/booking_details_flight_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/blue_2"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/booking_details_departure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/booking_details_departure"
        android:text="@string/ticket_details_from"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/booking_details_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:text=""
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toEndOf="@+id/booking_details_departure_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <EditText
        android:id="@+id/booking_details_passenger_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/booking_details_passenger_name_hint"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/booking_details_passenger_name_label"
        app:layout_constraintStart_toStartOf="@+id/booking_details_flight_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/booking_details_flight_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:text=""
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/booking_details_flight_date_label"
        app:layout_constraintStart_toStartOf="@+id/booking_details_destination"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/booking_details_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:text=""
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/booking_details_destination_label"
        app:layout_constraintStart_toStartOf="@+id/booking_details_departure"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/booking_details_destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/ticket_details_destination"
        android:text="@string/ticket_details_to"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_departure_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <TextView
        android:id="@+id/booking_details_flight_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/booking_details_flight_date"
        android:text="@string/ticket_details_flight_date"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_destination_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/booking_details_passenger_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/booking_details_passenger_name"
        android:text="@string/booking_details_passenger_name"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_flight_date_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/booking_details_passenger_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/booking_details_passenger_surname"
        android:text="@string/booking_details_passenger_surname"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_passenger_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <EditText
        android:id="@+id/booking_details_passenger_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/booking_details_passenger_surname_hint"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_passenger_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/booking_details_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100dp"
        android:labelFor="@id/booking_details_passenger_surname"
        android:text="@string/booking_details_price"
        android:textColor="@color/blue_2"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_passenger_surname_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/booking_details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        android:minWidth="220dp"
        android:textColor="@color/black_light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/booking_details_passenger_surname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/booking_details_book_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_details_book_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="aaaaa"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <Button
        android:id="@+id/booking_details_buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_details_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>